--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 *{
     margin:0;
     padding:0;
+    list-style: none;
+    text-decoration:none;
+}
+
+a:visited{
+    color:white;
 }
 
 .container{
@@ -14,6 +20,8 @@
     display:grid;
     grid-template: 1fr 5fr / 1fr 4.5fr; /*try shortening it*/
     --goldenColor: rgb(245, 193, 22);
+    --cyanColor:rgb(25, 156, 231);
+    --darkerCyanColor: rgb(16, 81, 119);
 }
 
 .sidebar{
@@ -22,7 +30,7 @@
     font-weight: 800;
     grid-row: 1 / 3;
     grid-column: 1;
-    background-color: rgb(25, 156, 231);
+    background-color: var(--cyanColor);
 }
 
 .nav-bar{
@@ -39,6 +47,12 @@
     align-items: center;
     gap:20px;
     margin: 10px 0;
+    padding: 5px 0;
+}
+
+.option:hover{
+    background-color: var(--darkerCyanColor);
+    border-radius: 5px;
 }
 
 .article{
@@ -105,7 +119,6 @@
 .upper-nav{
     display:flex;
     align-items: center;
-    gap:60px;
     margin:0 20px;
 }
 
@@ -122,20 +135,36 @@
     gap:20px;
 }
 
-button{
+.lower-nav button{
     display:inline-block;
     height:35px;
     width:100px;
     font-weight: bolder;
     border-radius: 50px;
     color:white;
-    background-color: rgb(25, 156, 231);
+    background-color: var(--cyanColor);
     border:none;
     flex: 1 0 auto;
 }
 
-button:hover{
-    background-color: rgb(16, 81, 119);
+.lower-nav button:hover{
+    background-color: var(--darkerCyanColor);
+    cursor: pointer;
+}
+    
+.upper-nav button{
+    border:none; 
+    background-color:initial;
+}
+
+.upper-nav svg{
+    width:24px;
+    height:24px; 
+    color: rgb(68, 68, 68);
+}
+
+.upper-nav svg:hover{
+    color:black;
     cursor: pointer;
 }
 
@@ -158,16 +187,18 @@ button:hover{
 #search-bar{
     flex:1;
     border-radius: 20px;
-    height:25px;
+    height:35px;
     background-color: rgb(230, 230, 230);
     width: 150px;
     border:none;
     padding: 5px 10px;
     font-size:14px;
+    flex:1;
+    margin: 0 60px 0 20px;
 }
 
 #search-bar:focus-visible{
-    border:none;
+    outline: 1px solid var(--cyanColor);
 }
 
 #profile-corner{
